호텔/객실 삭제 진행중

--- a/src/main/resources/static/css/admin/registerRoom.css
+++ b/src/main/resources/static/css/admin/registerRoom.css
@@ -8,9 +8,9 @@
     width: 350px;
 }
 
-.search-addr-btn {
+.confirm-duplication-btn {
     margin-left: 0.5rem;
-    width: 200px;
+    width: 150px;
 }
 
 .register-room-container {
