--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -41,7 +41,8 @@
             <h2 class="subtitle">매출 현황</h2>
         </div>
         <div class="link-container">
-            <a href="/admin/sales" class="link">매출</a>
+            <a href="/admin/monthSales?value=전체" class="link">월별 매출</a>
+            <a href="/admin/regionSales" class="link">지역별 매출</a>
         </div>
     </div>
 </div>
