--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -32,8 +32,10 @@
             <h2 class="subtitle">호텔 관리</h2>
         </div>
         <div class="link-container">
+            <a href="/admin/hotelStatus" class="link">호텔 현황</a>
             <a href="/admin/registerHotel" class="link">호텔 등록</a>
             <a href="/admin/modifyHotel" class="link">호텔 수정 및 삭제</a>
+            <a href="/admin/roomStatus" class="link">객실 현황</a>
             <a href="/admin/registerRoom" class="link">객실 등록</a>
             <a href="/admin/modifyRoom" class="link">객실 수정 및 삭제</a>
         </div>
@@ -41,7 +43,7 @@
             <h2 class="subtitle">매출 현황</h2>
         </div>
         <div class="link-container">
-            <a href="/admin/monthSales?value=전체" class="link">월별 매출</a>
+            <a href="/admin/monthSales?value=total" class="link">월별 매출</a>
             <a href="/admin/regionSales" class="link">지역별 매출</a>
         </div>
     </div>
