--- a/src/main/resources/templates/board/admin/adminList.html
+++ b/src/main/resources/templates/board/admin/adminList.html
@@ -32,8 +32,9 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>번호</th>
                 <th>글제목</th>
+                <th>호텔이름</th>
+                <th>질문유형</th>
                 <th>작성자</th>
                 <th>작성일</th>
                 <th>댓글작성여부</th>
@@ -43,12 +44,15 @@
             <!-- 댓글 !-->
             <tr th:each="board : ${boardList}">
                 <td>
-                    <span th:text="${board.id}"></span>
-                </td>
-                <td>
                     <a th:href="@{'/board/admin/' + ${board.id}}">
                         <span th:text="${board.title}"></span>
                     </a>
+                </td>
+                <td>
+                    <span th:text="${board.hotelname}"></span>
+                </td>
+                <td>
+                    <span th:text="${board.relation}"></span>
                 </td>
                 <td>
                     <span th:text="${board.username}"></span>
