--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -43,7 +43,7 @@
             <h2 class="subtitle">매출 현황</h2>
         </div>
         <div class="link-container">
-            <a href="/admin/monthSales?value=total" class="link">월별 매출</a>
+            <a href="/admin/monthSales?region=total" class="link">월별 매출</a>
             <a href="/admin/regionSales" class="link">지역별 매출</a>
         </div>
     </div>
