--- a/src/main/resources/static/css/admin/monthSales.css
+++ b/src/main/resources/static/css/admin/monthSales.css
@@ -1,7 +1,6 @@
 .sales-container {
     margin-top: 5rem;
     max-height: 100%;
-    border: 0.0625rem solid black;
     position: relative;
 
     display: flex;
@@ -13,10 +12,14 @@
     max-height: 100%;
     font-size: 1rem;
     position: absolute;
-    right: 0;
     border: none;
 }
 
 #salesGraph {
     margin: 3rem;
+}
+
+.category-container {
+    display: flex;
+    flex-direction: row;
 }
